static/scss/_components.scss
// Force sans-serif font on common components
.alert,
.badge,
.breadcrumb,
.btn,
.carousel,
.collapse,
.dropdown,
.dropdown-menu,
.jumbotron,
.label,
.list-group,
.media,
.modal,
.nav,
.navbar,
.pagination,
.panel,
.well {
  @include no-font-smoothing();
  font-family: $font-family-sans-serif;
}

// btn overrides
.btn {
  border-left: 0 solid transparent;
  border-right: 0 solid transparent;
  border-top: 0 solid transparent;
  font-weight: 600;
  text-transform: uppercase;
}

.btn-default {
  border-bottom: 6px solid $btn-default-border;
}

.btn-primary {
  border-bottom: 6px solid $btn-primary-border;
}

.btn-success {
  border-bottom: 6px solid $btn-success-border;
}

.btn-info {
  border-bottom: 6px solid $btn-info-border;
}

.btn-warning {
  border-bottom: 6px solid $btn-warning-border;
}

.btn-danger {
  border-bottom: 6px solid $btn-danger-border;
}

// Custom btn classes
.btn-cta {
  @include button-size(24px, 26px, 20px, 1.1, 0);
  white-space: normal;

  @media (min-width: $screen-lg-min) {
    font-size: 24px;
  }
}

.btn-cta-left,
.btn-cta-right {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.btn-cta-left {
  color: #000;
  padding-right: 15px;
  text-align: right;
  width: 38%;

  @media (max-width: $screen-xs-max) {
    padding-bottom: 10px;
    padding-right: 0;
    text-align: center;
    width: 100%;
  }
}

.btn-cta-right {
  border-left: 2px solid lighten($ucf-gold, 25%);
  color: #fff;
  padding-left: 15px;
  text-align: left;
  width: 57%; // not perfect 100% total to accommodate .sr-only between

  @media (max-width: $screen-xs-max) {
    border-left: 0 solid transparent;
    border-top: 2px solid lighten($ucf-gold, 25%);
    padding-left: 0;
    padding-top: 10px;
    text-align: center;
    width: 100%;
  }
}


// Custom callout classes

.callout { //.cluster-overview
  font-family: $font-family-sans-serif;
  font-weight: 300;
  margin: 0;
  padding: 60px 0 45px;

  h2 {
    font-family: $font-family-sans-serif;
    font-size: 26px;
    font-weight: 500;
    margin: 0 0 25px;
    text-transform: uppercase;
  }

  .bordered {
    border: 2px solid lighten($ucf-gold, 25%);
  }

  .bordered-dots {
    background: url('../img/gold-dots-vertical.png') 0% 0% repeat-y;
    border: 0;
    padding-left: 34px;

    @media (max-width: $screen-xs-max) {
      background: transparent;
      padding-left: 15px;
    }
  }

  .bordered-dots-left {
    background-position: 0% 0%;
    background-repeat: repeat-y;
  }

  .smaller {
    font-family: $font-family-sans-serif-alt;
    font-size: 15px;
  }

  ul {
    margin: 0;
    padding: 0;

    @media (max-width: $screen-xs-max) {
      text-align: center;
    }
  }

  li {
    font-family: $font-family-sans-serif;
    font-weight: 600;
    list-style-type: none;
    margin: 0 0 7px;
    padding: 0;

    @media (max-width: $screen-xs-max) {
      margin: 20px 0 0;
    }

    a {
      text-decoration: underline;

      @media (max-width: $screen-xs-max) {
        padding: 10px 20px;
      }
    }
  }
}

.faculty-statistics {
  .col {
    border: 1px solid $ucf-gold;
    font-size: 23px;
    height: 235px;
    padding-top: 45px;
    text-align: center;
    text-transform: uppercase;

    &.highlighted {
      background: $ucf-gold;
      color: #000;
    }

    &.middle {
      border-left: 0;
      border-right: 0;
    }

    &.full {
      height: auto;
      margin-top: -1px;
      padding-bottom: 20px;
      padding-top: 20px;
    }

    > strong {
      display: block;
      font-size: 100px;
      font-weight: 600;
      line-height: 105px;
    }
  }
}

.callout-cta {
  @media (min-width: $screen-lg-min) {
    font-size: 20px;
    line-height: 1.5;
  }

  h2 {
    color: $ucf-gold;
    font-size: 100px;
    font-weight: 600;
    letter-spacing: -.08em;
    margin-bottom: 15px;
    text-transform: none;

    @media (min-width: $screen-lg-min) {
      font-size: 110px;
    }

    @media (max-width: $screen-sm-max) {
      font-size: 95px;
    }

    @media (max-width: $screen-xs-max) {
      font-size: 60px;
    }
  }

  .btn-cta {
    color: #fff;
  }
}

.callout-static-bg {
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
}

.faculty-profile-callout {

  @media (max-width: $screen-md-max) {
    background-position: 68% 0;
    height: 400px;
  }

  @media (max-width: $screen-sm-max) {
    background-image: none !important; /* need !important to override inline style */
    height: auto;
    padding: 40px 0 30px;
  }


  blockquote {
    border: 0;
    font-family: $font-family-sans-serif;
    font-size: 34px;
    font-style: italic;
    font-weight: 100;
    line-height: 1.25;
    padding-left: 0;
    padding-top: 0;
    width: 45%;

    @media (max-width: $screen-md-max) {
      font-size: 23px;
      width: 50%;
    }
    @media (max-width: $screen-sm-max) {
      width: 100%;
    }
  }

  cite {
    display: block;
    font-size: 22px;
    font-style: normal;
    font-weight: 100;
    margin-top: 40px;

    @media (max-width: $screen-md-max) {
      font-size: 17px;
      font-weight: 100;
      margin-top: 0;
    }

    strong {
      font-weight: bold;
    }
  }
}


// Add animations to dropdowns
// Adapted from https://gist.github.com/orizens/4994397
@include body-prefix(':not(.ie8)') {
  .dropdown-menu {
    @include animation-fill-mode(forwards); // NOTE: deprecated mixin
    @include scale(1, 0);
    @include transform-origin(top);
    @include transition(all .3s cubic-bezier(.190, 1, .220, 1));
    box-shadow: 0 0 0 transparent;
    display: block;
  }

  .open > .dropdown-menu {
    @include scale(1, 1);
    box-shadow: 0 6px 12px rgba(0, 0, 0, .08);
  }

  .dropup .dropdown-menu {
    @include transform-origin(bottom);

    &:after {
      border-bottom: 0;
      border-left: 6px solid transparent;
      border-right: 6px solid transparent;
      border-top: 6px solid rgba(39, 45, 51, .9);
      bottom: -6px;
      content: '';
      display: inline-block;
      left: 50%;
      position: absolute;
      top: auto;
    }
  }
}


// Modals
.modal-dialog {
  margin-top: 75px; // UCF Header height + 25px pad
}


// Sidebars

.widget {
  background: #000;
  color: #fff;
  font-family: $font-family-sans-serif-alt;
  font-size: 13px;
  line-height: 15px;
  padding: 28px;
  // Allow sidebars to be positioned over .parallax-container's
  position: relative;
  z-index: 4;
  margin-bottom: 30px;

  .widget-title {
    background: url('../img/gold-dots-horizontal.png') 0% 100% repeat-x;
    border: 0;
    display: block;
    font-family: $font-family-sans-serif;
    font-size: 19px;
    font-weight: 500;
    line-height: 22px;
    margin: 0 0 15px;
    padding: 0 0 15px;
    text-transform: uppercase;
  }

  @media (max-width: $screen-sm-max) {
    font-size: 16px;
    line-height: 24px;
    margin: 0;
    margin-top: 0;
  }
}

.page-side-content {
  color: #333;
  font-family: $font-family-sans-serif;
  padding: 20px 0 0;

  @media (max-width: $screen-sm-max) {
    padding-left: 15px;
  }

  strong {
    color: #7d7d7d;
    font-weight: 700;
    text-transform: uppercase;
  }

  ul {
    @include list-unstyled;

    li {
      color: #999;
      font-family: $font-family-serif;
      font-size: 16px;
      font-style: italic;
      margin-top: 10px;
    }

    strong {
      color: #000;
      display: block;
      font-family: $font-family-sans-serif;
      font-style: normal;
      text-transform: none;
    }
  }
}

// Open Positions lists

.open-positions-container {
  background: #f9f9f9;
  margin-top: 30px;
}

.open-positions {
  font-family: $font-family-sans-serif;
  padding-bottom: 30px;
  padding-top: 30px;

  h2 {
    color: #7c7c7c;
    font-size: 13px;
    font-weight: 800;
    margin: 0 0 20px;
    @media (max-width: $screen-sm-max) {
      text-align: center;
    }
  }

  a {
    background: url('../img/arrow-right.png') 100% 50% no-repeat;
    display: block;
    text-decoration: none;

    @media (max-width: $screen-sm-max) {
      background: transparent;
      text-align: center;
    }
  }

  ul {
    @include list-unstyled;
    @include make-row;
    margin-bottom: 0;

    li {
      @extend .col-lg-2;
      @extend .col-md-3;
      @extend .col-sm-4;
      @extend .col-xs-12;
      font-size: 13px;
      font-weight: 500;
      line-height: 1.2;
      margin-bottom: 15px;
    }

    .field,
    .college {
      display: block;
      padding-right: 20px; // space for arrow-right.png

      @media (max-width: $screen-sm-max) {
        padding-right: 0;
      }
    }

    .field {
      color: #383838;
    }

    .college {
      color: $dark-gold;
      font-size: 11px;
      font-weight: 600;
      margin-top: 2px;
      text-transform: uppercase;
    }
  }
}


// Social Buttons
.share-twitter,
.share-facebook,
.share-googleplus,
.share-linkedin,
.share-email {
  @include sprite('../img/social-share-extended.png', '../img/social-share-extended-r.png', 354px, 62px);
  display: inline-block;
  height: 31px;
  margin-top: 5px;
  width: 70px;
}

.share-twitter {
  background-position: -71px 0;

  &:hover,
  &:active,
  &:focus {
    background-position: -71px -31px;
  }
}

.share-facebook {
  background-position: 0 0;

  &:hover,
  &:active,
  &:focus {
    background-position: 0 -31px;
  }
}

.share-googleplus {
  background-position: -142px 0;

  &:hover,
  &:active,
  &:focus {
    background-position: -142px -31px;
  }
}

.share-linkedin {
  background-position: -213px 0;

  &:hover,
  &:active,
  &:focus {
    background-position: -213px -31px;
  }
}

.share-email {
  background-position: -284px 0;

  &:hover,
  &:active,
  &:focus {
    background-position: -284px -31px;
  }
}

